<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ui.Main.UploadFragment"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/upload_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_title" />

        <LinearLayout
            android:id="@+id/form_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/upload_textView"
            android:orientation="vertical" >

            <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/choose_title" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/course_textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/course_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/choose_course"
                    android:inputType="none"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag" />

            <Spinner
                android:id="@+id/tag_spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:entries="@array/options_upload_spinner" />

            <TextView
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_file" />

            <androidx.cardview.widget.CardView
                android:id="@+id/file_cardView"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:id="@+id/uploadInput_layout"
                        android:layout_margin="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <ImageView
                            android:id="@+id/attach_imageView"
                            android:src="@drawable/baseline_upload_file_24"
                            android:layout_width="55dp"
                            android:layout_height="80dp"
                            android:contentDescription="icon" />

                        <Button
                            android:id="@+id/attach_button"
                            style="@style/Widget.Material3.Button.IconButton.Filled"
                            app:layout_constraintStart_toEndOf="@id/attach_imageView"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginVertical="16dp"
                            android:backgroundTint="@color/darkred"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/attach_file"
                            android:textColor="@color/white"
                            app:iconTint="?android:textAppearanceButton"
                            app:icon="@drawable/baseline_attach_file_24" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/uploadDisclaimer_textView"
                        app:layout_constraintTop_toBottomOf="@id/uploadInput_layout"
                        android:textColor="?android:textColorSecondary"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attach_file_description" />

                    <include
                        android:id="@+id/uploadedDocDetails"
                        layout="@layout/layout_document_details"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/uploadDisclaimer_textView"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/share_file"
            android:textSize="18sp"
            android:backgroundTint="@color/darkred"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            app:icon="@drawable/baseline_arrow_forward_ios_24"
            app:iconTint="?android:textAppearanceButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:indicatorColor="@color/darkred"
            app:trackColor="@color/darkgrey"
            android:indeterminate="true"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>