<resources>
    <string name="app_name" translatable="false">UniFolder</string>
    <string name="home" translatable="false">Home</string>
    <string name="upload">Upload</string>
    <string name="profile">Profile</string>
    <string name="logo">Logo Application</string>
    <string name="login" translatable="false">Login</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="google_login">Login with Google</string>
    <string name="account_first_name">Name</string>
    <string name="account_last_name">Last Name</string>
    <string name="new_password">Create Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="upload_title">Upload your material</string>
    <string name="choose_title">Choose a title for your material</string>
    <string name="choose_course">Select your study course</string>
    <string name="title">Title:</string>
    <string name="course">Study course:</string>
    <string name="tag">Tag:</string>
    <string name="select_file">Select your file:</string>
    <string name="attach_file_description">Please make sure to select a supported type of file.</string>
    <string name="share_file">Upload material</string>
    <string name="attach_file">Select file</string>
    <string name="medicine">Medicine</string>
    <string name="economics">Economics</string>
    <string name="law">Law</string>
    <string name="psychology">Psychology</string>
    <string name="education">Education</string>
    <string name="science">Science</string>
    <string name="sociology">Sociology</string>

    <string name="error_data">Data are not correct</string>
    <string name="error_email">Email is not correct</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="authentication_correct">Authentication correct</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="database_error">Database error</string>
    <string name="avatar_description">Avatar Image</string>
    <string name="delete_account">Delete Account</string>
    <string name="error">Something went wrong</string>
    <string name="close">Close</string>
    <string name="search_results">Search results for </string>
    <string name="error_password" translatable="false">Password should be at least 8 characters</string>
    <string name="error_user_collision_message" translatable="false">The email address is already in use by another account</string>
    <string name="unexpected_error" translatable="false">Unexpected error</string>
    <string name="error_login_user_message" translatable="false">There is no user record corresponding to this identifier</string>
    <string name="error_login_password_message" translatable="false">The password is invalid</string>
    <string name="email_sent">Email sent for password reset</string>
    <string-array name="options_upload_spinner">
        <item name="Lesson notes">Lesson notes</item>
        <item name="Exam questions">Exam questions</item>
        <item name="Other">Other</item>
    </string-array>
    <string-array name="options_filter_spinner">
        <item>All</item>
        <item>Lesson notes</item>
        <item>Exam questions</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="username" translatable="false">Username</string>
    <string name="title_error">Please insert a valid title for your upload</string>
    <string name="course_error">Please select the study course for your upload</string>
    <string name="file_error">Please select a valid file to upload</string>
    <string name="select_macroarea">Select macroarea</string>
    <string name="select_course">Select course</string>
    <string name="delete_account_question">Are you sure about deleting your account?</string>
    <string name="delete_account_message">Click \"Confirm\" to delete your account</string>
    <string name="confirm">Confirm</string>
    <string name="back_button">button for return to the previous page</string>
    <string name="document_filter">Filter documents</string>
    <string name="welcome">Welcome, </string>
    <string name="last_opened">Last documents viewed</string>
    <string name="my_uploads">My uploads</string>
    <string name="need_login" translatable="false">Login?</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="Titolo">titolo</string>
    <string name="Corso">corso</string>
    <string name="Tag">tag</string>
    <string name="description">visualizzazione documento</string>
    <string name="close_description">close fragment</string>
    <string name="desc">logo</string>
    <string name="filter">filter button</string>
    <string name="doc_uploaded_successfully">Document has been uploaded successfully!</string>
    <string name="no_results_found">No search results were found for your parameters. Please try to modify your search.</string>
    <string name="filter_action">Filter</string>

</resources>