...
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email" />

    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
...
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TextButton"
        android:text="Forgot password?"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="@id/text_input_layout_password"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
        app:layout_constraintBottom_toTopOf="@id/button_login" />

    <!-- Login Button -->
    <Button
        android:id="@+id/button_login"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="200dp"
...
